refactor: add img folder, change html css files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="assets/PhotoDolmat.ico">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
+	<title>CV Dolmat</title>
+</head>
 
 <body>
+	<header class="header">
+		<nav class="nav">
+			<ul class="nav-list">
+				<li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
+				<li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+				<li class="nav-item"><a href="#about me" class="nav-link">About me</a></li>
+				<li class="nav-item"><a href="#work experience" class="nav-link">Work experience</a></li>
+				<li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+				<li class="nav-item"><a href="#code example" class="nav-link">Code example</a></li>
+				<li class="nav-item"><a href="#english" class="nav-link">English level</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main class="main">
+		<section class="section" id="profile">
+			<h1 class="section-title">DOLMAT NATALLIA</h1>
+			<img class="photo" src="assets/img/PhotoDolmat.PNG" alt="my photo">
+		</section>
+		<section class="section" id="contact">
+			<h2 class="section-title">Contact:</h2>
+			<ul class="contact-list">
+				<li>phone: +375 44 7312282</li>
+				<li>discord: Dolmat Natallia</li>
+				<li>e-mail: tashka557@gmail.com</li>
+			</ul>
+		</section>
+		<section class="section" id="about me">
+			<h2 class="section-title">About me:</h2>
+			<p>I have been a legal adviser in commercial law since 2009.</p>
+			<p>I want to change my profession to a front-end developer.</p>
+		</section>
+		<section class="section" id="work experience">
+			<h2 class="section-title">Work experience:</h2>
+			<p>Nothing in front-end development yet. I just started studying it.</p>
+			<p>But I have experience in other fields:</p>
+			<ul class="work-list">
+				<li>2009 - until now: legal adviser in commercial law</li>
+				<li>2002 -2005: work in the trade of building materials</li>
+			</ul>
+		</section>
+		<section class="section" id="code example">
+			<h3 class="section-title">Code example:</h3>
+			<code
+				title="This code used to register to the Codewars, because I just started learning and do not have my examples.">
+				<div class="code">
+					function multiply(a, b = 1) {
+						<br>&emsp; return a * b;
+					<br>}
+				</div>
+			</code>
+		</section>
+		<section class="section" id="education">
+			<h3 class="section-title">Education:</h3>
+			<p>2002-2007 International Humanitarian Institute.
+				<br>Specialty - commercial law, qualifications - lawyer.
+			</p>
+		</section>
+		<section class="section" id="english">
+			<h3 class="section-title">English level:</h3>
+			<p>A2+</p>
+		</section>
+		<section section class="section" id="certificate">
+			<h3>&emsp;&emsp;</h3>
+			<img src="assets/img/englishA2.png" alt="certificate" width="140" height="90">
+		</section>
+	</main>
+
+	<footer class="footer">
+		<p>&#169; 2022</p>
+		<a href="https://github.com/NatalliaDolmat" class="footer-link">GitHub</a>
+		<img src="https://rs.school/images/rs_school_js.svg" alt="logo rsschool" width="80px" height="40px">
+		<a href="https://rs.school/js-stage0/" class="footer-link">JavaScript/Front-end. Stage 0</a>
+	</footer>
 
 </body>
 
