refactor:change img,chage formatting

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			<ul class="nav-list">
 				<li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
 				<li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-				<li class="nav-item"><a href="#about me" class="nav-link">About me</a></li>
-				<li class="nav-item"><a href="#work experience" class="nav-link">Work experience</a></li>
+				<li class="nav-item"><a href="#aboutMe" class="nav-link">About me</a></li>
+				<li class="nav-item"><a href="#workExperience" class="nav-link">Work experience</a></li>
 				<li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-				<li class="nav-item"><a href="#code example" class="nav-link">Code example</a></li>
+				<li class="nav-item"><a href="#codeExample" class="nav-link">Code example</a></li>
 				<li class="nav-item"><a href="#english" class="nav-link">English level</a></li>
 			</ul>
 		</nav>
@@ -42,12 +42,12 @@
 				<li>e-mail: tashka557@gmail.com</li>
 			</ul>
 		</section>
-		<section class="section" id="about me">
+		<section class="section" id="aboutMe">
 			<h2 class="section-title">About me:</h2>
 			<p>I have been a legal adviser in commercial law since 2009.</p>
 			<p>I want to change my profession to a front-end developer.</p>
 		</section>
-		<section class="section" id="work experience">
+		<section class="section" id="workExperience">
 			<h2 class="section-title">Work experience:</h2>
 			<p>Nothing in front-end development yet. I just started studying it.</p>
 			<p>But I have experience in other fields:</p>
@@ -56,15 +56,14 @@
 				<li>2002 -2005: work in the trade of building materials</li>
 			</ul>
 		</section>
-		<section class="section" id="code example">
+		<section class="section" id="codeExample">
 			<h3 class="section-title">Code example:</h3>
-			<code
-				title="This code used to register to the Codewars, because I just started learning and do not have my examples.">
-				<div class="code">
+			<code title="This code that I used when registering in Codewars, becauseI just started learning.">
+				<span>
 					function multiply(a, b = 1) {
 						<br>&emsp; return a * b;
 					<br>}
-				</div>
+				</span>
 			</code>
 		</section>
 		<section class="section" id="education">
@@ -77,16 +76,15 @@
 			<h3 class="section-title">English level:</h3>
 			<p>A2+</p>
 		</section>
-		<section section class="section" id="certificate">
-			<h3>&emsp;&emsp;</h3>
-			<img src="assets/img/englishA2.png" alt="certificate" width="140" height="90">
+		<section class="section">
+			<img src="assets/img/certificate.png" alt="certificate">
 		</section>
 	</main>
 
 	<footer class="footer">
 		<p>&#169; 2022</p>
 		<a href="https://github.com/NatalliaDolmat" class="footer-link">GitHub</a>
-		<img src="https://rs.school/images/rs_school_js.svg" alt="logo rsschool" width="80px" height="40px">
+		<img class="rslogo" src="https://rs.school/images/rs_school_js.svg" alt="logo rsschool">
 		<a href="https://rs.school/js-stage0/" class="footer-link">JavaScript/Front-end. Stage 0</a>
 	</footer>
 
