refactor:edited html ahd css files

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 				<br>Specialty - commercial law, qualifications - lawyer.
 			</p>
 		</section>
-		<section class="section" id="english">
-			<h3 class="section-title">English level:</h3>
-			<p>A2+</p>
-		</section>
-		<section class="section">
-			<img src="assets/img/certificate.png" alt="certificate">
+		<section class="section-en" id="english">
+			<div id="title-english">
+				<h3 class="section-title">English level:</h3>
+				<p>A2+</p>
+			</div>
+			<div id="certificate"><img src="assets/img/certificate.png" alt="certificate"></div>
 		</section>
 	</main>
 
